# masters

./: .gitignore  Cargo.toml  README.md
config/: embeddings.toml
src/: main.rs
src/domain/: entities.rs  errors.rs
src/embeddings/: mod.rs  trainer.rs
src/infrastructure/: audio.rs  augmentation.rs  mod.rs
src/models/wavlm/: export_wavlm.py
src/notebook/: VISTA.ipynb
src/preprocessing/: augmenter.rs  mod.rs
