[package]
name = "masters"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
dasp-rs = "0.1.0"
hound = "3.5.1"
indicatif = "0.17.11"
num-complex = "0.4.6"
rand = "0.9.0"
rustfft = "6.2.0"
serde = "1.0.219"
serde_json = "1.0.140"
tch = "0.19.0"
thiserror = "2.0.12"
toml = "0.8.20"
